* Did a little fixing to show icon command

* Added report command (only works with images, gifs, and videos)

* Added useful functions to index.js 

* Added report channel id to config

* Removed 'no title' and 'mention' filter from alert command

* Alert command defaults now has mentions and no title

* Added debug filter to alert command

* Modified report command footer

12/12/2019 (UTC+7)